--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,9 @@
-h1 {
-  color: red;
-}
+@import "fonts.scss";
+@import "variables.scss";
+@import "mixins.scss";
+@import "scaffolding.scss";
+@import "blocks/main-header.scss";
+@import "blocks/logo.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/social.scss";
+@import "blocks/block.scss";
