Завершает вёрстку и стилизацию шапки и подвала страницы всёх трёх версий

--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -39,3 +39,27 @@
 
   margin-top: 0;
 }
+
+
+@media (max-width: $mobile-width-only) {
+  .logo__maintext {
+    @include empty-rule;
+
+    &--header {
+      display: none;
+    }
+
+    &--footer {
+      color: $logo-black;
+    }
+  }
+
+  .logo__subtext {
+    @include empty-rule;
+
+    &--header {
+      display: none;
+    }
+  }
+
+}
