Добавляет вёрстку главного экрана (все версии)

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "scaffolding.scss";
 @import "blocks/main-header.scss";
 @import "blocks/logo.scss";
+@import "blocks/main-screen.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/block.scss";
