--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,6 +1,6 @@
 body {
   @include reset-space;
-  background-color: $bg-grey-light;
+  background-color: $white;
 
   font-family: "PT Mono", monospace;
   font-size: 16px;
