--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "blocks/main-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/main-screen.scss";
+@import "blocks/advantages.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/block.scss";
