--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/main-screen.scss";
 @import "blocks/advantages.scss";
 @import "blocks/about-company.scss";
+@import "blocks/goods.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/block.scss";
