--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/advantages.scss";
 @import "blocks/about-company.scss";
 @import "blocks/goods.scss";
+@import "blocks/form.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/block.scss";
