Добавляет вёрстку модального окна обратной связи (все версии)

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -148,6 +148,11 @@
   @include form-active;
 }
 
+@mixin feedback-input {
+  @include form-input;
+  padding: 14px 24px;
+}
+
 @mixin form-active {
   &:hover,
   &:focus {
