--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,4 +11,4 @@
 @import "blocks/form.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/social.scss";
-@import "blocks/block.scss";
+@import "blocks/feedback.scss";
