--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -8,7 +8,8 @@
 
 .logo__text-wrapper {
   @include flex-column;
-  margin-left: 16px;
+  margin-left: 17px;
+  padding-top: 7px;
 }
 
 .logo__maintext {
