--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -7,6 +7,7 @@
   @include desktop-container;
   @include flex-row;
   margin-top: 65px;
+  padding-right: 8px;
 }
 
 .main-footer__logo-social-wrapper {
@@ -14,8 +15,7 @@
 }
 
 .main-footer__logo-wrapper {
-  margin-top: 6px;
-  margin-bottom: 54px;
+  margin-bottom: 55px;
 }
 
 .main-footer__logo {
@@ -23,7 +23,7 @@
 }
 
 .main-footer__social {
-  margin-bottom: 66px;
+  margin-bottom: 59px;
 }
 
 .main-footer__info-wrapper {
@@ -32,13 +32,21 @@
 }
 
 .main-footer__sections-wrapper {
-  margin-right: 20vh;
+  margin-right: 356px;
   margin-left: 0;
+
+  .main-footer__title {
+    margin-left: 9px;
+  }
 }
 
 .main-footer__contact-details-wrapper {
   margin-left: auto;
   margin-right: 0;
+
+  .main-footer__title {
+    margin-left: 2px;
+  }
 }
 
 .main-footer__title {
@@ -52,7 +60,7 @@
   font-weight: 400;
   letter-spacing: 0.05em;
 
-  margin-bottom: 29px;
+  margin-bottom: 25px;
 }
 
 .main-footer__btn {
@@ -75,7 +83,8 @@
 }
 
 .main-footer__sections-item {
-  margin-right: 65px;
+  margin-right: 66px;
+  padding-left: 8px;
 }
 
 .main-footer__sections-link {
@@ -106,27 +115,28 @@
   @include desktop-container;
   @include flex-row;
   justify-content: space-between;
+  padding-right: 8px;
 }
 
 .main-footer__info-item {
   margin: 14px auto;
 
-  &:first-child {
+  &[data-footer-number="1"] {
     margin-left: 0;
-    margin-right: 59px;
+    margin-right: 76px;
   }
 
-  &:nth-child(2) {
+  &[data-footer-number="2"] {
     margin-left: 0;
-    margin-right: 142px;
+    margin-right: 141px;
   }
 
-  &:nth-child(3) {
+  &[data-footer-number="3"] {
     margin-left: 0;
     margin-right: auto;
   }
 
-  &:last-child {
+  &[data-footer-number="4"] {
     margin-left: auto;
     margin-right: 0;
   }
