--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: transparent;
   margin-top: 33px;
+  padding-right: 7px;
   z-index: 1;
 }
 
@@ -16,10 +17,14 @@
   @include flex-row;
   margin-left: auto;
   margin-right: 0;
+
+  li:first-child {
+    margin-right: 86px;
+  }
 }
 
 .main-header__contacts-item {
-  margin: 0 44px;
+  margin: 0;
 }
 
 .main-header__contacts-link {
@@ -28,10 +33,21 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 17.92px;
+
+  &:hover,
+  &:focus {
+    color: $blue;
+
+    .main-header__contacts-icon {
+      fill: $white;
+    }
+  }
 }
 
 .main-header__contacts-icon {
   @include empty-rule;
+
+  fill: $blue;
 
   &--email {
     margin-right: 20px;
@@ -53,7 +69,9 @@
   border-radius: 5px;
 
   padding: 15px 28px;
-  margin-left: 38px;
+  padding-bottom: 12px;
+  margin-left: 50px;
+  margin-top: -3px;
 
   @include active-states;
 }
