--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -6,6 +6,17 @@
   font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 
+@mixin ptmono-font {
+  font-family: "PT Mono", monospace;
+}
+
+@mixin page-main-font {
+  @include ptmono-font;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 22px;
+}
+
 @mixin clear-list {
   list-style: none;
   margin: 0;
@@ -48,13 +59,13 @@
   margin: 0 110px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1220px;
+  max-width: 1440px;
 }
 
 @mixin desktop-container {
   width: $desktop-width;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 20px;
 }
 
 @mixin tablet-container {
@@ -138,7 +149,9 @@
 @mixin form-input {
   border: none;
   background-color: rgba($white, 0.1);
-  padding: 14px 17px;
+  padding: 15px 17px;
+
+  @include page-main-font;
   color: $white;
 
   &::placeholder {
